# HaskellLogicalLanguage

./: README.md
Logic/: .ghc.environment.x86_64-linux-8.6.5  Logic.cabal
Logic/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
Logic/lib/: arith.l  list.l  test1.l  test2.l  test3.l
Logic/src/: Main.hs
Logic/tests/: arith.l  lam.l
